k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ivolve-ns
  labels:
    app: java
