k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-deployment
  namespace: ivolve-ns
spec:
  selector:
    matchLabels:
      app: java
  template:
    metadata:
      labels:
        app: java
    spec:
      containers:
      - name: java-app
        image: ahemida96/ivolve-app
        imagePullPolicy: "IfNotPresent"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
