k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ivolve-service
  namespace: ivolve-ns
spec:
  type: ClusterIP
  selector:
    app: java
  ports:
  - port: 8081
    targetPort: 8081
