k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-ingress
  namespace: ivolve-ns
  labels:
    name: java-ingress
    app: java
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ivolve-devops.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ivolve-service
            port: 
              number: 8081
